--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@kovsu/eslint-config-vue": "^0.1.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.33.0",
+    "sass": "^1.58.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
