--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "1.0.0-beta.6",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
   },
